# E-Graph-Optimizer

./: README.md  gitignore  project.cabal  replit.nix  stack.yml
app/: Main.hs  Optimizer.hs
src/Compiler/: AST.hs  CodeGenerator.hs  Parser.hs  Semantic Analyzer.hs  SymbolTable.hs
src/compiler/: Lexer.hs
test/: Spec.hs
test/TestCompiler/: CodeGeneratorSpec.hs  LexerSpec.hs  OptimizerSpec.hs  ParserSpec.hs  SemanticAnalyzerSpec.hs  SymbolTableSpec.hs
